[package]
name = "phi-detector"
version = "0.3.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An Implementation of Phi Accrual Failure Detector"
repository = "https://github.com/akiradeveloper/phi-detector"
readme = "README.md"
categories = ["algorithms"]
keywords = ["distributed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "time", "rt-threaded"] }